# Influencer-Automation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .gitignore  db.py  extract.py  main.py  models.py  rss_sources.py  summarize.py  tasks.py  tts.py
frontend/: .env.example  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
