[project]
name = "influencer-automation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "celery-types==0.24.0",
    "elevenlabs>=2.30.0",
    "fastapi>=0.128.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.40.0",
]
